# chatgame

./: .gitignore  todos.txt
backend/: .env  .env_example.txt  .gitignore  pyproject.toml  requirements.txt  wsgi.py
backend/chatgame/: __init__.py  config.py  constants.py  extensions.py  handlers.py
backend/chatgame/api/: __init__.py
backend/chatgame/api/auth/: __init__.py  deps.py  exceptions.py  handlers.py  utils.py
backend/chatgame/blueprints/: __init__.py
backend/chatgame/database/: __init__.py
backend/chatgame/db/: __init__.py  utils.py
backend/chatgame/dto/: TotalStatisticsDto.py  __init__.py
backend/chatgame/exceptions/: AlreadyExistsException.py  ApiException.py  BadRequestException.py  InvalidTokenException.py  NotFoundException.py  TokenExpiredException.py  __init__.py
backend/chatgame/models/: SubStatisticsModel.py  TotalStatisticsModel.py  UserModel.py  __init__.py
backend/chatgame/namespaces/: __init__.py
backend/chatgame/sockets/: __init__.py  chat.py  friends.py  tictactoe.py
backend/chatgame/utils/: decorators.py  email.py  errors.py  fields.py  funcs.py  models.py
backend/migrations/versions/: 206e08260fe3_.py  20707de6979f_.py  23a71a72c5c7_add_balance_item_payment.py  32710a38b305_edit_friend_table.py  850983eb2bc6_add_user_online_status.py  ba99f799f7da_.py  eb199ebc6490_.py  ef424741de18_.py  f64c4ab248ae_.py  f81c96bc91fa_add_user_last_seen.py
backend/tests/: conftest.py  test_auth.py  test_users.py
backend/tests/auth/: test_auth.py  test_login.py  test_logout.py  test_register.py
backend/tests/users/: test_me.py
(+305 files in other folders)
