[project]
name = "chatgame"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-apscheduler>=1.13.1",
    "flask-cors>=5.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-pydantic>=0.12.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2>=2.9.10",

    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",

    "pytest>=8.3.5",
]